--- a/movie-ticket/src/main/resources/templates/index.html
+++ b/movie-ticket/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
             <div th:each="movie: ${movies}" class="col-lg-2 my-3">
                 <a th:href="@{/movie/detail/__${movie.id}__}">
                     <div class="card text-bg-dark">
-                        <img src="/image/c1a96dc68209201a6eabd9e88ea99d9b.png" class="card-img" th:alt="${movie.title}">
+                        <img th:src="${movie.avatar}" class="card-img" th:alt="${movie.title}">
                         <div class="card-img-overlay">
                             <h5 class="card-title" th:text="${movie.title}">Đất Rừng Phương Nam</h5>
                             <p class="card-text" th:text="${'Thể loại: '+movie.category.nameCategory}">Thể loại: Gia
