--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -48,7 +48,7 @@
                     <table class="table table-hover">
                         <thead>
                         <tr>
-                            <th scope="col">ID</th>
+                            <th scope="col">STT</th>
                             <th scope="col">TÊN PHIM</th>
                             <th scope="col">ĐẠO DIỄN</th>
                             <th scope="col">NGÀY CÔNG CHIẾU</th>
