--- a/movie-ticket/src/main/resources/templates/user/dashboard-user-purchased-view.html
+++ b/movie-ticket/src/main/resources/templates/user/dashboard-user-purchased-view.html
@@ -45,7 +45,7 @@
                     <label for="price" class="col-sm-2 col-form-label">Giá vé xem phim:</label>
                     <div class="col-sm-10">
                         <input type="text" readonly class="form-control-plaintext" id="price"
-                               th:value="${booking.showTime.price}">
+                               th:value="${#numbers.formatDecimal(booking.showTime.price, 0, 'POINT', 0, 'COMMA')} + ' đ'">
                     </div>
                 </div>
                 <div class="mb-3 row">
@@ -68,7 +68,7 @@
                 <div class="mb-3 row">
                     <label for="totalPrice" class="col-sm-2 col-form-label">Tổng tiền thanh toán:</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="totalPrice" th:value="${booking.totalPrice}">
+                        <input type="text" readonly class="form-control-plaintext" id="totalPrice" th:value="${#numbers.formatDecimal(booking.totalPrice, 0, 'POINT', 0, 'COMMA')} + ' đ'">
                     </div>
                 </div>
             </div>
