--- a/movie-ticket/src/main/resources/templates/customer/dashboard-admin-customer.html
+++ b/movie-ticket/src/main/resources/templates/customer/dashboard-admin-customer.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-lg-9 ps-5 table-dashboard order">
                 <div class="create">
-                    <a href="#"><i class="fa-solid fa-square-plus"></i> Thêm khách hàng</a>
+                    <a href="/dashboard/customer/create"><i class="fa-solid fa-square-plus"></i> Thêm khách hàng</a>
                 </div>
                 <div class="table-main">
                     <div class="search-table">
