--- a/movie-ticket/src/main/resources/templates/customer/edit-customer.html
+++ b/movie-ticket/src/main/resources/templates/customer/edit-customer.html
@@ -16,7 +16,7 @@
                     <div class="row mb-3">
                         <label for="inputNameCategory" class="col-sm-2 col-form-label">Chỉnh sửa tên khách hàng</label>
                         <div class="col-sm-10">
-                            <input th:field="*{fullName}" type="text" class="form-control" id="inputNameCategory" required>
+                            <input th:field="*{fullName}" type="text" class="form-control" id="inputNameCategory">
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -96,7 +96,7 @@
                         <label class="col-sm-2 col-form-label">Chỉnh sửa email khách hàng</label>
                         <div class="col-sm-10">
                             <div>
-                                <input th:field="*{email}" type="text" class="form-control" id="inputEmailCustomer" required>
+                                <input th:field="*{email}" type="text" class="form-control" id="inputEmailCustomer">
                             </div>
                         </div>
                     </div>
@@ -112,22 +112,29 @@
                         <label class="col-sm-2 col-form-label">Chỉnh sửa số điện thoại khách hàng</label>
                         <div class="col-sm-10">
                             <div>
-                                <input th:field="*{phoneNumber}" type="text" class="form-control" id="inputPhoneNumberCustomer" required>
+                                <input th:field="*{phoneNumber}" type="text" class="form-control" id="inputPhoneNumberCustomer">
                             </div>
                         </div>
                     </div>
 
                     <div class="row mb-3">
-                        <label class="col-sm-2 col-form-label">Chỉnh sửa sổ thẻ cccd khách hàng</label>
+                        <label class="col-sm-2 col-form-label">Chỉnh sửa sổ thẻ CCCD/CMND khách hàng</label>
                         <div class="col-sm-10">
                             <div>
-                                <input th:field="*{idCard}" type="text" class="form-control" id="inputIdcardCustomer" required>
+                                <input th:field="*{idCard}" type="text" class="form-control" id="inputIdcardCustomer">
                             </div>
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
+                    <div class="row mb-12">
+                        <div class="col-sm-6 d-flex justify-content-center" >
+                            <button type="button" class="btn btn-primary" style="background: #E20442 ;width: 242px">
+                                <a th:href="@{/dashboard/customer}" style="text-decoration: none ; color: white ">Thoát</a>
+                            </button>
+                        </div>
+                        <div class="col-sm-6 d-flex justify-content-center">
+                            <button type="submit" class="btn btn-primary" style="background: #E20442 ;width: 242px">Chỉnh sửa thông tin</button>
+                        </div>
                     </div>
                 </form>
             </div>
