--- a/movie-ticket/src/main/resources/templates/movie/add.html
+++ b/movie-ticket/src/main/resources/templates/movie/add.html
@@ -19,18 +19,18 @@
                 <form action="/dashboard/movies/confirm-add" method="post" th:object="${movieDto}">
                     <div class="mb-3">
                         <label class="form-label" for="title">Tên phim</label>
-                        <input class="form-control" id="title" th:field="*{title}" type="text">
-                        <p style="color: red" th:errors="*{title}" th:if="${#fields.hasErrors('title')}"></p>
+                        <input class="form-control" id="title" th:field="*{title}" type="text" required>
+                        <p style="color: #e20442" th:errors="*{title}" th:if="${#fields.hasErrors('title')}"></p>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="director">Đạo diễn</label>
-                        <input class="form-control" id="director" th:field="*{director}" type="text">
-                        <p style="color: red" th:errors="*{director}" th:if="${#fields.hasErrors('director')}"></p>
+                        <input class="form-control" id="director" th:field="*{director}" type="text" required>
+                        <p style="color: #e20442" th:errors="*{director}" th:if="${#fields.hasErrors('director')}"></p>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="releaseDate">Ngày công chiếu</label>
-                        <input class="form-control" id="releaseDate" th:field="*{releaseDate}" type="date">
-                        <p style="color: red" th:errors="*{releaseDate}"
+                        <input class="form-control" id="releaseDate" th:field="*{releaseDate}" type="date" required>
+                        <p style="color: #e20442" th:errors="*{releaseDate}"
                            th:if="${#fields.hasErrors('releaseDate')}"></p>
                     </div>
                     <div class="mb-3">
@@ -49,7 +49,7 @@
                                 <input accept=".jpg, .jpeg, .png" class="form-control" id="upload-file" multiple
                                        onchange="limitFiles(this,1)" type="file">
                                 <input id="image2" name="image2" required th:field="*{avatar}" type="hidden">
-                                <p style="color: red" th:errors="*{avatar}" th:if="${#fields.hasErrors('avatar')}"></p>
+                                <p style="color: #e20442" th:errors="*{avatar}" th:if="${#fields.hasErrors('avatar')}"></p>
                             </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                                 <input accept=".jpg, .jpeg, .png" class="form-control" id="upload-banner" multiple
                                        onchange="limitFiles(this,1)" type="file">
                                 <input id="image3" name="image3" required th:field="*{banner}" type="hidden">
-                                <p style="color: red" th:errors="*{banner}" th:if="${#fields.hasErrors('banner')}"></p>
+                                <p style="color: #e20442" th:errors="*{banner}" th:if="${#fields.hasErrors('banner')}"></p>
                             </div>
                         </div>
                     </div>
@@ -84,8 +84,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="description">Mô tả phim</label>
-<!--                        <input class="form-control" id="description" th:field="*{description}" type="text">-->
-                        <textarea style="width: 100%" id="description" th:field="*{description}"></textarea>
+                        <textarea style="width: 100%" id="description" th:field="*{description}" required></textarea>
                         <p style="color: red" th:errors="*{description}"
                            th:if="${#fields.hasErrors('description')}"></p>
                     </div>
